Modernize runtime, generator, CI and docs across ZSI
- add profiling/benchmark tooling and release gate checks (including tag doc validation)

- introduce wsdl2py --fast prototype and improve generated import dedupe

- optimize parse/compound hot paths and enrich diagnostics with WSDL/namespace/element context

- add resolver URI hardening helper plus dedicated security/runtime diagnostic tests

- modernize interop/scripts entrypoints for Python 3 and refresh samples/doc/runbook documentation

- consolidate dev quality stack with ruff+black and wire lint into CI

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,23 @@
 [build-system]
 requires = ["setuptools>=61", "wheel"]
 build-backend = "setuptools.build_meta"
+
+[tool.black]
+line-length = 88
+target-version = ["py311"]
+include = '\.pyi?$'
+extend-exclude = '''
+(
+  ^/test/wsdl2py/stubs/
+)
+'''
+
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+extend-exclude = [
+  "test/wsdl2py/stubs",
+]
+
+[tool.ruff.lint]
+select = ["E", "F", "I", "W", "UP"]
