feat: add migration/dashboards and compatibility guardrails
- add resolver cache keyed by URL + content hash and regression test

- add static CI artifact dashboard generator plus test and docs

- add ZSI->Zeep migration guide and link it in README/doc index

- add explicit ZSI compatibility statement and contract test

- run compatibility contract in CI test job

- update improvements roadmap statuses

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,6 +119,10 @@ jobs:
             --warn-regression 0.20 \
             --min-history 3 \
             --update-history
+          python scripts/build_dashboards.py \
+            --benchmark-smoke .perf/benchmark-smoke.json \
+            --benchmark-history .perf/benchmark-history.json \
+            --out doc/ci-artifact-dashboard.md
 
   tests:
     name: ${{ matrix.os }} / py${{ matrix.python-version }}
@@ -149,6 +153,11 @@ jobs:
         env:
           PYTHONPATH: .
         run: python test/test_zsi.py
+
+      - name: ZSI compatibility contract
+        env:
+          PYTHONPATH: .
+        run: python test/test_zsi_compat_contract.py
 
       - name: Integration local suite
         env:
