feat: complete next modernization tracks (dispatch, transport, streaming, cli)
- add ServiceProxy operation index and bind(service, port) routing helper

- modernize transport behavior with timeout shortcut and SOAP 1.2 content-type handling

- add compact CLI path via scripts/zsi.py and scripts/zsi_call.py

- add streaming SOAP parse prototype and CLI helper

- add namespace-prefix lookup cache optimization

- add modernization regression tests and wire them into CI

- update README/scripts docs and mark roadmap items completed

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -159,6 +159,19 @@ jobs:
           PYTHONPATH: .
         run: python test/test_zsi_compat_contract.py
 
+      - name: Modernization regressions
+        env:
+          PYTHONPATH: .
+        run: |
+          python test/test_serviceproxy_bind.py
+          python test/test_transport_modernization.py
+          python test/test_zsi_call_cli.py
+          python test/test_zsi_cli_wrapper.py
+          python test/test_resolver_cache.py
+          python test/test_namespace_lookup_cache.py
+          python test/test_stream_parse_prototype.py
+          python test/test_build_dashboards.py
+
       - name: Integration local suite
         env:
           PYTHONPATH: .
